--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,9 +4,13 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'BACKEND/BIBLIOTECA/**'
   pull_request:
     branches:
       - main
+    paths:
+      - 'BACKEND/BIBLIOTECA/**'
 
 defaults:
   run:
@@ -33,4 +37,3 @@ jobs:
 
       - name: Run tests
         run: ./gradlew test -Dspring.profiles.active=test
-
