--- a/BACKEND/BIBLIOTECA/build.gradle
+++ b/BACKEND/BIBLIOTECA/build.gradle
@@ -1,3 +1,5 @@
+import org.apache.tools.ant.filters.ReplaceTokens
+
 plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.5.7'
@@ -39,4 +41,13 @@ tasks.named('test') {
 	useJUnitPlatform()
 
     systemProperty "spring.profiles.active", "test"
+}
+
+// Tarea para procesar recursos y reemplazar placeholders
+processResources {
+    filesMatching(['application.yml', 'application-render.yml']) {
+        filter(ReplaceTokens, tokens: [
+                'project.version': project.version
+        ])
+    }
 }
