--- a/BACKEND/BIBLIOTECA/build.gradle
+++ b/BACKEND/BIBLIOTECA/build.gradle
@@ -24,7 +24,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    testImplementation 'io.projectreactor:reactor-test'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 
 	// Dependencias de test
@@ -34,6 +36,9 @@ dependencies {
 	// H2 para pruebas en memoria y también como driver runtime para el perfil 'render'
 	implementation 'com.h2database:h2'
 	testImplementation 'com.h2database:h2'
+
+    //
+    implementation 'io.projectreactor:reactor-core'
 
 }
 
